<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hint_add_item">Item name</string>
    <string name="add">Add</string>
    <string name="err_required">Required</string>
    <string name="error_add_stock">Something went wrong, please try again</string>
    <string name="hint_quantity">Quantity</string>
    <string name="measure_units">Units</string>
    <string name="measure_mass">Mass (Grams)</string>
    <string name="measure_volume">Volume (Millimeters)</string>
    <string name="measure_length">Length (Millimeters)</string>
    <string name="error_quantity">Please enter a valid numeric value</string>
    <string name="error_unit_of_measure">Please choose a unit of measurement</string>
</resources>